2004-06-14 Colin McCormack <colin@chinix.com>
	* htdoc/htaccess/*: Made /htaccess accept Windows style pathnames
	* lib/{template,fallback,doc}.tcl: fixed Windows difficulty with .html
	  some corner cases - Thanks to GW Lester

2004-06-12 Colin McCormack <colin@chinix.com>
	* htdoc/access/htman.tml - updated documentation
	* lib/auth.tcl: removed obsolete reference to AuthDefaultFile
	* lib/httpd.tcl: added filtering of content through Httpd_ReturnData
	  and Httpd_ReturnCacheableData
	* lib/url.tcl: added -filter option to Url_PrefixInstall,
	  specifying a content filter.
	* htdoc/man/{url,http}.man: updated for filtering changes.
	* lib/{template,doc,fallback}.tcl: reorganised for
	  generalised templates.
	* lib/redirect.tcl: added Redirect_QuerySelf - Redirect_Self
	  preserving query data

2004-06-11 Colin McCormack <colin@chinix.com>
	* lib/{auth,digest}.tcl: fixed Digest authentication bug
	* htdocs/htaccess/*: improved /htaccess tool
	* lib/thread.tcl: Fixed sf [ 964179 ] error in proc:Thread_IsFree

2004-05-28 Brent Welch <welch@panasas.com>
        * CVS tag tclhttpd-3-5-1 for the 3.5.1 release

2004-05-28 Brent Welch <welch@panasas.com>
        * htdocs/learn/* - various doc updates
        * DIST_build/Makefile.boot
        * DIST_build/DIST
        Updates to use a pre-packaged thread-2.5.2 release because I'm
        having build/autoconf troubles with CVS HOL (thread 2.6)

2004-05-27 Colin McCormack <colin@chinix.com>
	* lib/utils.tcl
	* lib/digest.tcl
	* lib/session.tcl
	changed all the md5 refs to a utils.tcl defined
	version-appropriate alias 'md5hex', this should be future proof
	(and past-proof), since it adapts the interface explicitly.
	Recommend using md5hex explicitly.
	* debian/: updated debian package version ahead of 3.5.1 release
	
2004-05-18 Brent Welch <welch@panasas.com>
        * README
        * VERSION
        * configure.in
        * DIST_build/DIST
        * DIST_build/DIST.exp
        * DIST_build/Makefile.boot